1006 iijima feat: お題名と安全な投稿状態詳細を共通表示
